Fix sidenote rendering on mobile

--- a/themes/simple/assets/css/sidenote.css
+++ b/themes/simple/assets/css/sidenote.css
@@ -38,7 +38,6 @@
 
     /* Don't break up line containing the sidenote */
     float: left;
-    min-width: 100%;
 
     /** display: block; **/
     margin: 0.8rem 0;
